<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/deepBackground">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/detailMovieTitle"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/cardView"
                app:srcCompat="@drawable/render" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                android:background="@color/lighterBackground"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="200dp"
                    android:layout_height="280dp"
                    android:src="@drawable/testpic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/detailMovieTitle"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/detail_score2"
                style="@style/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/score"
                app:layout_constraintBottom_toBottomOf="@+id/star"
                app:layout_constraintStart_toEndOf="@+id/star"
                app:layout_constraintTop_toTopOf="@+id/star" />

            <TextView
                android:id="@+id/genre"
                style="@style/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/genre1"
                app:layout_constraintEnd_toStartOf="@+id/detail_genre"
                app:layout_constraintTop_toTopOf="@+id/star" />

            <TextView
                android:id="@+id/detail_genre"
                style="@style/detailed_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/genre"
                app:layout_constraintBottom_toBottomOf="@+id/genre"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:src="@android:drawable/btn_star_big_on"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_summary" />

            <TextView
                android:id="@+id/detailPremiered"
                style="@style/subtitle"
                android:layout_marginEnd="70dp"
                android:text="@string/date_premiered"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailMovieTitle" />

            <TextView
                android:id="@+id/show_lenght"
                style="@style/subtitle"
                android:layout_marginStart="10dp"
                android:text="Minutes"
                app:layout_constraintStart_toEndOf="@+id/detailPremiered"
                app:layout_constraintTop_toBottomOf="@+id/detailMovieTitle" />

            <TextView
                android:id="@+id/textview5"
                style="@style/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Minutes"
                app:layout_constraintStart_toEndOf="@+id/show_lenght"
                app:layout_constraintTop_toBottomOf="@+id/detailMovieTitle" />

            <TextView
                android:id="@+id/detail_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/segoeuisl"
                android:text="@string/summary"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailPremiered" />

            <TextView
                android:id="@+id/language"
                style="@style/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/language"
                app:layout_constraintStart_toStartOf="@+id/star"
                app:layout_constraintTop_toBottomOf="@+id/detail_score2" />

            <TextView
                android:id="@+id/detail_language"
                style="@style/detailed_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/english"
                app:layout_constraintStart_toEndOf="@+id/language"
                app:layout_constraintTop_toTopOf="@+id/language" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lighterBackground"
                app:layout_constraintBottom_toTopOf="@+id/detail_summary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailPremiered" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lighterBackground"
                app:layout_constraintBottom_toTopOf="@+id/language"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/star" />

            <TextView
                android:id="@+id/country"
                style="@style/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="Country: "
                app:layout_constraintEnd_toStartOf="@+id/detail_country"
                app:layout_constraintTop_toBottomOf="@+id/detail_score2" />

            <TextView
                android:id="@+id/detail_country"
                style="@style/detailed_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/gb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/language" />

            <TextView
                android:id="@+id/network"
                style="@style/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network"
                app:layout_constraintStart_toStartOf="@+id/star"
                app:layout_constraintTop_toBottomOf="@+id/language" />

            <TextView
                android:id="@+id/detail_network"
                style="@style/detailed_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/channel_4"
                app:layout_constraintStart_toEndOf="@+id/language"
                app:layout_constraintTop_toTopOf="@+id/network" />

            <Button
                android:id="@+id/website"
                style="@style/super_button_details"
                android:layout_width="220dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:paddingTop="-30dp"
                android:text="@string/official_site"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_network" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>