<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.dragos.moviesearch.viewmodel.MainViewModel" />

            <variable
                name="movie"
                type="com.dragos.moviesearch.data.Movie" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deepBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="164dp"
        android:layout_height="285dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="12dp"
        android:background="@color/deepBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="164dp"
            android:layout_height="285dp"
            android:background="@color/lighterBackground"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/seguisb"
                android:paddingStart="4dp"
                android:text="@string/terminator_dark_fate"
                android:textColor="@color/whiteText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/movieImg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieImg" />

            <TextView
                android:id="@+id/item_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuisl"
                android:text="@string/score"
                android:textColor="@color/whiteText"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/Star"
                app:layout_constraintStart_toEndOf="@+id/Star"
                app:layout_constraintTop_toBottomOf="@+id/item_genres" />

            <TextView
                android:id="@+id/item_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:fontFamily="@font/segoeuisl"
                android:paddingStart="4dp"
                android:text="@string/genres"
                android:textColor="@color/whiteText"
                android:textSize="11sp"
                app:layout_constraintTop_toBottomOf="@+id/item_title" />

            <ImageView
                android:id="@+id/Star"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="2dp"
                android:padding="2dp"
                android:src="@android:drawable/btn_star_big_on"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_genres" />

            <ImageView
                android:id="@+id/movieImg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:showPhoto="@{movie.show.image.medium}"
                app:srcCompat="@drawable/ic_broken_image"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>